# client_request

./: .gitignore  README.md  pyproject.toml
bigqueryapi/: StorageClient.py  bqclient.py  download_blob.py  main.py  retrieve_buckets.py
tests/: retrieve_buckets.py
